[package]
name = "wikitext"
description = "Deno wikitext parser"
repository = "https://github.com/Liamolucko/wikitext"
license = "MIT"
version = "0.1.0"
authors = ["Liam Murphy"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["wee_alloc"]
